--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-numpy
-pandas
-matplotlib
-scipy
-statsmodels
-mplcursors
-scikit-learn
+matplotlib==3.10.7
+mplcursors==0.7
+networkx==3.5
+numpy==2.3.5
+pandas==2.3.3
+Requests==2.32.5
+scikit_learn==1.7.2
+scipy==1.16.3
+statsmodels==0.14.5
+torch==2.9.0+cpu
+tqdm==4.67.1
